force-app/main/default/objects/leaseworks__Invoice_Adjustment_Line_Item__c/leaseworks__Invoice_Adjustment_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Adjustment Line Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Adjustment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>