force-app/main/default/objects/leaseworks__Invoice_Adjustment_Line_Item__c/fields/leaseworks__Invoice_Line_Amt__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Line_Amt__c</fullName>
    <description>&quot;Initial ‘Line Amount’ on the Invoice Line Item. Used when multi-currency is enabled.&quot;</description>
    <formula>leaseworks__Invoice_Line_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&quot;Initial ‘Line Amount’ on the Invoice Line Item. Used when multi-currency is enabled.&quot;</inlineHelpText>
    <label>Invoice Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>