force-app/main/default/objects/leaseworks__Invoice_Adjustment_Line_Item__c/fields/leaseworks__Invoice_Total_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Total_Line_Amount__c</fullName>
    <description>Displays the original invoice line amount + any approved line adjustments</description>
    <formula>leaseworks__Linked_Invoice_Line_Item__r.leaseworks__Total_Line_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the original invoice line amount + any approved line adjustments</inlineHelpText>
    <label>Invoice Total Line Amount($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>