force-app/main/default/objects/leaseworks__Invoice_Adjustment_Line_Item__c/fields/MR_Fund__c.field-meta.xml
<CustomField>
    <fullName>MR_Fund__c</fullName>
    <description>To assist with mapping on the DocGen templates</description>
    <formula>leaseworks__Linked_Invoice_Line_Item__r.leaseworks__Assembly_MR_Info__r.Name</formula>
    <inlineHelpText>Identifies the MR Fund (Supplemental Rent) for the line item</inlineHelpText>
    <label>MR Fund</label>
    <type>Text</type>
</CustomField>